commit for unsaved drafts

--- a/Journal.html
+++ b/Journal.html
@@ -1,12 +1,6 @@
 <html>
 <h1>Weekly Journal</h1>
 
-<head>  
-
-<link rel="stylesheet" href="css/styles.css">
-
-</head>
-
 <head>
 <script>window.addEventListener("scroll", function() {
     let scrollPosition = window.scrollY;
@@ -18,11 +12,11 @@
     <li>Week : Febuary # 5
     "I watched a movie called the imitation game on the pioneer of 
     computer science who is a man named Alan Turing and how he broke
-    enigma during the second world war."</li>
+    enigma during the second world war."</li><br>
     <li>Week : Febuary # 12
     "I Started with downloading multiple software installments needed
     to create this website including the sections as weekly journal, class
-    projects, and useful bookmarks."</li>
+    projects, and useful bookmarks."</li><br>
     <li>Week : Febuary # 19
     "I started a project (languages of the world) where we had to research
     a specific language (for me it was lua) and add ceratin characteristics
@@ -30,36 +24,36 @@
     I started tasks from gobi which is a coding software that enables you 
     to learn website development, Javascript and lastly mazes. Finally 
     CSE came to the class to present us rasberry pi's and an overview of
-    their software interface."</li>
+    their software interface."</li><br>
     <li>Week : Febuary # 26
     "I did complete more gobi tasks like html, css, and Javascript. As
     well as CSE coming to our class in an attempt to get us to be warmed
     up with the linux systems using rasberry pi's and how they can alter our
-    everyday life. "</li>
+    everyday life. "</li><br>
     <li>Week : March # 4
     "Firstly I started with completing an HOC Website, secondly CSE came in to
     make our rasberry pi's light up like cords of rainbow, thirdly we 
     presented our poster board's of languages (code:lua), finally we did 
-    MCU with python."</li>
+    MCU with python."</li><br>
     <li>Week : March # 18 
     "Firstly I started with completing Gobi tasks of Javascript syntax,
     than I did CSE in making new mac passwords plus usernames as well,
     lastly I did our first quiz in github which included 4 programs
     such as a temperature converter, leap year checker, largest
-    number finder, and finally a grade calculator based on a designated scale."</li>
+    number finder, and finally a grade calculator based on a designated scale."</li><br>
     <li>Week : March # 25
     "I did a javascript basic code syntax within codehs where there was a specific 
     tutorial which enbaled js coding teaching in a variety of teaching ways such
     as videos, programs, codes, algorithims, quizzes, questions etc. Plus I had
     to submit a daily progress/check in screenshot within google classroom for
-    maximal effiency."</li>
+    maximal effiency."</li><br>
     <li>Week : April # 1
     "I did complete unit 3 of the javascript syntax in codehs tutorials and started unit
     4, than I proceeded to do CSE in making for loops and setting up pixels of the unicorn
     hat using a different # or amount of calls. Finally I completed 5 assignments of Unit - 1 :
     Javascript : 1.1 - output and console, 1.2 - variables, 1.3 - mathematics, 1.4 - user input,
     lastly 1.5 - conditionals part 1 and 2."
-    </li>
+    </li><br>
     <li>Week : April # 8
     "Firstly I started off with completing a research project named careers in ICS which
     was ultimately deemed an individual base assingment, than i proceeded to do CSE in making
@@ -67,7 +61,7 @@
     in enabling movement horizontally forwards plus backwards as well, then I proceeded to do a midterm self
     assesment/evalutaion in google forms, and lastly to top it off with a quiz on the topic of unit 1 - Javascript
     of the format within google forms as well."
-    </li>
+    </li><br>
     <li>Week : April # 15 
     "Firstly I started off with doing an intital mini task of a 1st classroom repo, than I did another Unit 1 - Javascript
     assignment which was 1.6 - Logical Operators % Modulus as well, than I did a review of 1.1-1.5 all in js, afterwards I
@@ -75,53 +69,53 @@
     how to make an obscilating column within the parametres of the unicornhat, also I did a practical test in VsCode where
     I had to code a simple guessing game in the langauge of javascript, lastly I started with the new unit which is #2 - Javascript
     assignment labeled 2.1 - Functions."
-    </li>
+    </li><br>
     <li>Week : April # 22 
     "Firstly I started off with doing a Unit 2 task called 2.2 - return statements, than I proceeded to put all of my 
      Unit 1 tasks in a completely seperate repository in enabling to better access for sole marking purposes, additionally
      I did vice versa for all of the unit 2 tasks as well, afterwards I did a new unit 2 task being 2.3 - scope, than CSE came in
      and we continued to do challenges such as lighting pixels up in terms of movement up the y/x axis, lastly I finished
      off the week by doing the Unit 2 review tasks plus starting an extra assignment called the "Monty Hall" "
-    </li>
+    </li><br>
     <li>Week : April # 29 
     "Firstly I started off with doing the Unit 2 Summative assesment, than I proceeded with Cse 
     in which it was our last ultimate and sufficient day with them by playing around with games such as 
     one of pong, fighter flight, catching a ball etc. , and lastly I finished off the week by completing a task labeled while loops with starting
     a new unit numbered as 3.1 called looping."
-    </li>
+    </li><br>
     <li>Week : May # 6 
     "First off I started with doing a Unit 3 task being 3.2 - strings, than completing 
     others by the name of: 3.3 - Do While, 3.4 - For Loops, checking the updated class schedule in the format of
     google sheets, 3.5 - Nested Loops, 3.6 - Arrays, putting them all in one repository named Advanced control constructs
     for unit 3 tasks collectively and lastly creating a CSE challenges repo in making 3 folders seperately to properly organize
     all challenges into sections of being total beginner, intermediate, and finally expert."
-    </li>
+    </li><br>
     <li>Week : May # 13 
     "First off I started with finalizing/completing unit 3 tasks once and for all, afterwards I went on and reached ahead
      in updating and adding some divisions, elements, and lastly comments which ultimately enhances the interactivity plus styles overall.
      Additionally I added some new advancements in connecting my computer with an individual and unique rasberry pi."
-    </li>
+    </li><br>
     <li>Week : May # 20
     "This whole week I was just working on the unit 3 presentation where I got into a group of 4 and then proceeded with developing
     an informative research topic in relation to strings."
-    </li>
+    </li><br>
     <li>Week : May # 27 
     "This week I was fully devoted on working within my tribute page of Fouseytube in the form of an website
     and had the chance to go to a very well off put together art showcase in the midddle of the week for a
     change of scenery."
-    </li>
+    </li><br>
     <li>Week : June # 3
     "This week I was working on 7.3 (being a project where I created a website in the form of a tirbute page for the infamous youtuber; Fouseytube) , 7.4(creating two unique buttons including one of
     a reducer and resetter), and 7.5 (Events in Html/Js where there was one margin) collectively."
-    </li>
+    </li><br>
     <li>Week : June # 10
     "This week we were doing all of the unit 3 presentations varying from topics within javascript of: strings, while loops, do while
     loops, for loops, nested loops, and lastly arrays. I was additonally introduced to our RST where we have to pick a proposal in gorups of 4
     and than therefore create either a game, storyboard, or website from coding by the form of developing from scratch."
-    </li>
+    </li><br>
     <li>Week : June # 17
-    "This week I was working on my RST with group mebers including Fuxuan, Alex and finally Yann."
-    </li>
+    "This week I was working on my RST (A blackjack game with a modified interface) with group members including Fuxuan, Alex and finally Yann."
+    </li><br>
 </ul>
 </head>
 </html>
