--- a/Bookmarks.html
+++ b/Bookmarks.html
@@ -1,26 +1,82 @@
 <html>
 <h1>Useful Bookmarks</h1>
 
-<table>" <tr><a href="https://codehs.com/">Code HS</a>"</tr>
-<tr>"<a href="https://github.com/?authuser=0">Git Hub</a>"</tr>
-<tr>"<a href="https://codepen.io/">Code Pen</a>"</tr>
-<tr>"<a href="https://academy.cs.cmu.edu/">CMU CS Academy</a>"</tr>
-<tr>"<a href="https://cscircles.cemc.uwaterloo.ca/">CS Circles</a>"</tr>
-<tr>"<a href="https://www.w3schools.com/">W3 Schools</a>"</tr>
-<tr>"<a href="https://www.codecademy.com/">Code Academy</a>"</tr>
-<tr>"<a href="https://www.typingclub.com/">Typing Club</a>"</tr>
-<tr>"<a href="https://app.gocobi.com/">Gobi</a>"</tr>
-<tr>"<a href="https://stackoverflow.com/">Stack Overflow</a>"</tr>
-<tr>"<a href="https://developer.mozilla.org/en-US/">MDN Web Docs</a>"</tr>
-<tr>"<a href="https://www.geeksforgeeks.org/">Geeks For Geeks</a>"</tr>
-<tr>"<a href="https://www.khanacademy.org/computing/computer-science">Khan Academy - Computer Science</a>"</tr>
-<tr>"<a href="https://www.khanacademy.org/computing">Khan Academy - Computing</a>"
-<tr>"<a href="https://www.coursera.org/">Coursera</a>"
-<tr>"<a href="https://scholar.google.ca/">Google Scholar</a>"
-<tr>"<a href="https://arxiv.org/">Ar Xiv</a>"
-<tr>"<a href="HackerRank/LeetCode">Hacker Rank/Leet Code</a>"
-<tr>"<a href="https://ocw.mit.edu/">MIT Open Course Ware</a>"
-<tr>"<a href="DevDocs/">Dev Docs</a>"
-<tr>"<a href="https://computerhistory.org/">The Computer History Museum</a>"
-<tr>"<a href="https://dl.acm.org/">The ACM Digital Library</a>"</table>
+
+
+
+<table bgcolor="blue width="700">
+        <tr bgcolor="red">
+            <th width="100">#1</th>
+            <th width="100">2</th>
+            <th width="100">3</th>
+            <th width="100">4</th>
+            <th width="100">5</th>
+            <th width="100">6</th>
+            <th width="100">7</th>
+            <th width="100">8</th>
+            <th width="100">9</th>
+            <th width="100">10</th>
+            <th width="100">11</th>
+            <th width="100">12</th>
+            <th width="100">13</th>
+            <th width="100">14</th>
+            <th width="100">15</th>
+            <th width="100">16</th>
+            <th width="100">17</th>
+            <th width="100">18</th>
+            <th width="100">19</th>
+            <th width="100">20</th>
+            <th width="100">21</th>
+            <th width="100">22 </th>
+            
+        </tr>
+        <tr bgcolor="lightblue" align="center">
+            <td><a href="https://codehs.com/">Code HS</a></td>
+            <td><a href="https://github.com/?authuser=0">Git Hub</a></td>
+            <td><a href="https://codepen.io/">Code Pen</a>
+            </td>
+            <td><a href="https://academy.cs.cmu.edu/">CMU CS Academy</a>
+            </td>
+            <td><a href="https://cscircles.cemc.uwaterloo.ca/">CS Circles</a>
+            </td>
+            <td><a href="https://www.w3schools.com/">W3 Schools</a>
+            </td>
+            <td><a href="https://www.codecademy.com/">Code Academy</a>
+            </td>
+            <td><a href="https://www.typingclub.com/">Typing Club</a>
+            </td>
+            <td><a href="https://app.gocobi.com/">Gobi</a>
+            </td>
+            <td><a href="https://stackoverflow.com/">Stack Overflow</a>
+            </td>
+            <td><a href="https://developer.mozilla.org/en-US/">MDN Web Docs</a>
+            </td>
+            <td><a href="https://www.geeksforgeeks.org/">Geeks For Geeks</a>
+            </td>
+            <td><a href="https://www.khanacademy.org/computing/computer-science">Khan Academy - Computer Science</a>
+            </td>
+            <td><a href="https://www.khanacademy.org/computing">Khan Academy - Computing</a>
+            </td>
+            <td><a href="https://www.coursera.org/">Coursera</a>
+            </td>
+            <td><a href="https://scholar.google.ca/">Google Scholar</a>
+            </td>
+            <td><a href="https://arxiv.org/">Ar Xiv</a>
+            </td>
+            <td><a href="HackerRank/LeetCode">Hacker Rank/Leet Code</a>
+            </td>
+            <td><a href="https://ocw.mit.edu/">MIT Open Course Ware</a>
+            </td>
+            <td><a href="DevDocs/">Dev Docs</a>
+            </td>
+            <td><a href="https://computerhistory.org/">The Computer History Museum</a>
+            </td>
+            <td><a href="https://dl.acm.org/">The ACM Digital Library</a>
+            </td>
+        </tr>
+    </table>
+    <br>
+    <section>Thank you for viewing the Liam Rodrigs code portfolio!!! 😄, 😎, 🌟, 🎉, 🍕, 🚀, 💡, 🎈</section>
+    
+</body>
 </html>
