final project commit

--- a/FinalProject.html
+++ b/FinalProject.html
@@ -1,4 +1,6 @@
 <html>
 
+<embed src="https://ash-ics-ics3u-2023.github.io/rst-2024-new-game-Xfx689781/" width="2000" height="2000"></embed>.
 
+<Section>Have Fun!!</Section>
 </html>
