commit and push test

--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
 
   <head><title>Liam Rodrigs Portfolio</title></head>
 
-  "<a href="Journal.html">Weekly Journal</a>"
-  "<a href="Projects.html">Class Projects</a>"
-  "<a href="Bookmarks.html">Useful Bookmarks</a>"
-  "<a href="FinalProject.html">Final Project</a>"
+<ul>
+  <li>"<a href="Journal.html">Weekly Journal</a>"</li>
+  <li>"<a href="Projects.html">Class Projects</a>"</li>
+  <li>"<a href="Bookmarks.html">Useful Bookmarks</a>"</li>
+  <li>"<a href="FinalProject.html">Final Project</a>"</li>
+</ul>
 
   <div class="toggle-button" onclick="document.querySelector('.box').classList.toggle('active')">
   </div>
