--- a/Journal.html
+++ b/Journal.html
@@ -1,7 +1,8 @@
 <html>
-<h1>Weekly Journal</h1>
-
+<h1><i>Weekly Journal</i></h1>
+<hr>
 <head>
+<body>
 <script>window.addEventListener("scroll", function() {
     let scrollPosition = window.scrollY;
     if (scrollPosition > 100) {
@@ -118,4 +119,5 @@
     </li><br>
 </ul>
 </head>
+</body>
 </html>
