--- a/Projects.html
+++ b/Projects.html
@@ -1,6 +1,7 @@
 <html>
-<h1>Class Projects</h1>
-
+<h1><strong>Class Projects</strong></h1>
+<hr>
+<head><script src="js/script.js"></script></head>
 "<a href="https://docs.google.com/document/d/1LIUfOKghol-qAZ2qyqtCG18B07d2Fsiw3lYgVL7U7DE/edit?usp=sharing">Languages Of The World - Computer Science : Lua
 </a>" 
 
@@ -31,4 +32,11 @@ a sample of other things necessary to complete this degree exactly or even the d
 the length of time to complete the degree or diploma reunification for the entire complexition of the courses
 , and lastly how this specific career I have chosen in section one helps me fulfill the vocation that God has 
 truthfully sent me to.</p>
+
+"<a href="https://docs.google.com/presentation/d/1IUTLub7E1jSQTO8JPKRPm9UV-RPYmEOd_gbYCCfRcbY/edit#slide=id.p1">Unit : 3 Group - Presentation on Stirngs in Javascript</a>"
+
+<p>This is a project where I alongside Fuxuan, Daniel and lastly Alp portrayed a presentation focusing on the primary subtopic of strings in Javascript
+    including features of multibyte characteristics all the way to unicode and encode etc.
+</p>
+
 </html>
