--- a/Unit2.html
+++ b/Unit2.html
@@ -1,20 +1,25 @@
 <html>
 <h1>Unit 2 - Javascript : Tasks</h1>
+<hr>
 
 "<a href="https://github.com/LiamRodrigs/ICS3U/blob/main/Unit01/Unit02/2.1%20-%20Functions.js">2.1 - Functions</a>"
 
 <p>This is a task where I went to use var instead of let because of flexibility purposes, prompting the user
 for daily routine and concurrent activities which individuals perform, than calculating total amount of tax with 
 a function created, peforming it based on whether or not the operator is based on dividers, testing the actual function,
-defining the pythagorean thereom
+defining the pythagorean thereom etc.
 </p>
 
 "<a href="https://github.com/LiamRodrigs/ICS3U/blob/main/Unit01/Unit02/2.2%20-%20Return%20Statements.js">2.2 - Return Statements</a>"
 
-<p>This is a task</p>
+<p>This is a task where I returned specfic statements such as code of two ghosts seperately and one of created Functions
+such as the area for a complete circle and cylinder additionally.
+</p>
 
 "<a href="https://github.com/LiamRodrigs/ICS3U/blob/main/Unit01/Unit02/2.3%20-%20Scope.js">2.3 - Scope</a>"
 
-<p>This is a task</p>
+<p>This is a task where I created global and local variables to see if particular code was correct or not
+and change it based of off sole interpretation within overall reference errrors.
+</p>
 
 </html>
