--- a/Unit3.html
+++ b/Unit3.html
@@ -1,28 +1,35 @@
 <html>
 <h1>Unit 3 - Looping : Tasks</h1>
+<hr>
 
 "<a href="https://github.com/ics-ASH/3-1-while-loops-LiamRodrigs/blob/main/3.1-While.js">3.1 - While Loops</a>"
 
-<p>This is a task where </p>
+<p>This is a task where a "While" Loop is used to repeat a specific block of code an unknown number of times, until a condition is met. For example, if we want to ask a user for a number between 1 and 10, we don't know how many times the user may enter a larger number, so we keep asking "while the number is not between 1 and 10".
+</p>
 
 "<a href="https://github.com/ics-ASH/3-2-strings-LiamRodrigs/blob/main/3.2%20-%20Strings.js">3.2 - Strings</a>"
 
-<p>This is a task</p>
+<p>This is a task where a JavaScript string stores a series of characters like "John Doe". String indexes are zero-based: The first character is in position 0, the second in 1, and so on.
+</p>
 
 "<a href="https://github.com/LiamRodrigs/ICS3U/blob/main/Unit01/Unit02/Unit03/3.3%20-%20Do%20While.js">3.3 - Do While</a>"
 
-<p>This is a task</p>
+<p>This is a task where The do... while statement creates a loop that executes a specified statement as long as the test condition evaluates to true. The condition is evaluated after executing the statement, resulting in the specified statement executing at least once.
+</p>
 
 "<a href="https://github.com/LiamRodrigs/ICS3U/blob/main/Unit01/Unit02/Unit03/3.4%20-%20For%20Loops.js">3.4 - For Loops</a>"
 
-<p>This is a task</p>
+<p>This is a task where a for loop repeats until a specified condition evaluates to false. The JavaScript for loop is similar to the Java and C for loop. When a for loop executes, the following occurs: The initializing expression initialization , if any, is executed.
+</p>
 
 "<a href="https://github.com/LiamRodrigs/ICS3U/blob/main/Unit01/Unit02/Unit03/3.5%20-%20Nested%20Loops.js">3.5 - Nested Loops</a>"
 
-<p>This is a task</p>
+<p>This is a task where a nested for loop is when you have one for loop inside another for loop. This construction is necessary when you want to perform operations on more complex data structures, like a matrix or a list of lists. Each level of the loop corresponds to one level of depth in the data structure.
+</p>
 
 "<a href="https://github.com/LiamRodrigs/ICS3U/blob/main/Unit01/Unit02/Unit03/3.6%20-%20Arrays.js">3.6 - Arrays</a>"
 
-<p>This is a task</p>
+<p>This is a task where array in JavaScript is a type of global object that is used to store data. Arrays consist of an ordered collection or list containing zero or more data types, and use numbered indices starting from 0 to access specific items.
+</p>
 
 </html>
