--- a/Unit7.html
+++ b/Unit7.html
@@ -1,5 +1,30 @@
 <html>
 
+<h1>Unit 7 - Front End Development : Tasks</h1>
+<hr>
 
+<a href="https://github.com/ics-ASH/4-1-front-end-dev-LiamRodrigs">7.1 - Front End Dev
+</a>
+
+<p>This is a task where I focusing on creating the front end of an html web browser website.</p>
+
+<a href="https://github.com/LiamRodrigs/Liam-Rodrigs---7.3---Organization">7.3 - Organization
+</a>
+
+<p>This is a task where I completely organized and created a tribute page for Fouseytube.</p>
+
+<a href="https://github.com/ash-ics-ICS3U-2023/7-4-commit-here-LiamRodrigs">7.4 - Interacting
+</a>
+
+<p>This is a task where I focused on enabling interaction within the user and the input of the computer interface with the help
+    of two clicker buttons which ultimately reduced one value, another one adding values, and the lastly resetting all the click entirely.
+</p>
+
+<a href="https://github.com/ash-ics-ICS3U-2023/7-5-events-in-html-LiamRodrigs">7.5 - Events in HTML/JS
+</a>
+
+<p>This is a task where I took two images of door and made a click sound whne they opened and closed all together. Additonally
+    I mad events in HTML/JS which included a variety of mouse button triggers in upholding values overall in total.
+</p>
 
 </html>
