--- a/index.html
+++ b/index.html
@@ -1,32 +1,35 @@
 <!DOCTYPE html>
 <html>
-  <h1>The Liam Rodrigs Code Portfolio/Website - RST</h1>
 
-  <head><title>Liam Rodrigs Portfolio</title></head>
+<h1><em>The Liam Rodrigs Code Portfolio/Website - RST</em></h1>
+<hr>
+  <head><title>Liam Rodrigs Portfolio</title>
+  <link rel="stylesheet" href="css/styles.css">
+  </head>
 
 <ul>
-  <li>"<a href="Journal.html">Weekly Journal</a>"</li>
-  <li>"<a href="Projects.html">Class Projects</a>"</li>
-  <li>"<a href="Bookmarks.html">Useful Bookmarks</a>"</li>
-  <li>"<a href="FinalProject.html">Final Project</a>"</li>
+  <li><a href="Journal.html">Weekly Journal</a></li>
+  <li><a href="Projects.html">Class Projects</a></li>
+  <li><a href="Bookmarks.html">Useful Bookmarks</a></li>
+  <li><a href="FinalProject.html">Final Project</a></li>
+  <li><a href="Unit1.html">Unit 1 - Intro to Javascript : Tasks</a></li>
+  <li><a href="Unit2.html">Unit 2 - Javascript : Tasks</a></li>
+  <li><a href="Unit3.html">Unit 3 - Looping : Tasks</a></li>
+  <li><a href="Unit7.html">Unit 7 - Front End Development : Tasks</a></li>
+  <li><a href="https://liamrodrigs.github.io/Liam-Rodrigs---7.3---Organization/">*Check out my tribute page for a famous youtuber, click here urgently, fast, quickly</a></li>
 </ul>
+</head>
+</body>
+
+<body><Body background="images/180254154-abstract-glowing-blue-coding-programming-background-with-blank-round-mock-up-frame-big-data-and-code.jpg"></body>
 
   <div class="toggle-button" onclick="document.querySelector('.box').classList.toggle('active')">
   </div>
-  <div class="box">Click here for a fun experience!</div>
+  <div class="box">Toggle here for a fun experience!</div>
 
-  Tag	Purpose
-  <title>Content</title>	This will place the content in the tab or top bar of the browser application window. This tag must be placed inside the <head> of the page
-  <h1>Content</h1>	This is a heading tag - do not confuse this with the <title> tag. Headings can have 6 different sizes where <h1> is the largest and <h6> is the smallest. Try them out!
-  <b>Content</b>	This will bold the content
-  <strong>Content</strong>	This will also bold the content but has a slightly different meaning. This means that the content is very important
-  <i>Content</i>	This will italicize the content
-  <em>Content</em>	This will also italicize the content but similar to the <strong> tag, it has a level of importance to it, describing the content as quite important
-  <p>Content</p>	This is the paragraph tag and is useful to separate text into paragraphs. By default it will put an empty line between paragraphs of text
-  <div>Content</div>	One of the most-used tags, this is a divider or section or container of content for the page. As you become used to HTML and styling your page you will learn to use these to break-up your content for different looks or areas on the page
-  <button>Text</button>	This will place a clickable grey button with the Text written on it. For now the button will do nothing but we'll learn to make it react using JavaScript
-  <br>	Insert a break-line
-  <hr>	Insert a horizontal line across the page
-  <img>	The image tag is used to insert a picture (jpg, png, etc) on the page.
-  It requires many options.
-  For Example: <img src="myfile.png" width="200px">
+  <head><body><Script>document.getElementById("myButton").addEventListener("click", function() {
+    alert("Button clicked!");
+  });</Script></body></head>
+  <button>Hi?? Click here for a special magic trick!</button>	
+  <br>	
+  <hr>
