--- a/FinalProject.html
+++ b/FinalProject.html
@@ -1,5 +1,9 @@
 <html>
-
+    <div id="topLeftSection">
+        <a href="index.html"><button>Return Home</button></a>
+    </div>
+    <br>
+    
 <embed src="https://ash-ics-ics3u-2023.github.io/rst-2024-new-game-Xfx689781/" width="2000" height="2000"></embed>.
 
 <Section>Have Fun!!</Section>
