--- a/Journal.html
+++ b/Journal.html
@@ -1,6 +1,10 @@
 <html>
 <h1><i>Weekly Journal</i></h1>
 <hr>
+<div id="topLeftSection">
+  <a href="index.html"><button>Return Home</button></a>
+</div>
+<br>
 <head>
 <body>
 <script>window.addEventListener("scroll", function() {
