--- a/Projects.html
+++ b/Projects.html
@@ -1,6 +1,10 @@
 <html>
 <h1><strong>Class Projects</strong></h1>
 <hr>
+<div id="topLeftSection">
+    <a href="index.html"><button>Return Home</button></a>
+</div>
+<br>
 <head><script src="js/script.js"></script></head>
 "<a href="https://docs.google.com/document/d/1LIUfOKghol-qAZ2qyqtCG18B07d2Fsiw3lYgVL7U7DE/edit?usp=sharing">Languages Of The World - Computer Science : Lua
 </a>" 
