--- a/Unit7.html
+++ b/Unit7.html
@@ -2,7 +2,10 @@
 
 <h1>Unit 7 - Front End Development : Tasks</h1>
 <hr>
-
+<div id="topLeftSection">
+    <a href="index.html"><button>Return Home</button></a>
+</div>
+<br>
 <a href="https://github.com/ics-ASH/4-1-front-end-dev-LiamRodrigs">7.1 - Front End Dev
 </a>
 
