--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <head><title>Liam Rodrigs Portfolio</title>
   <link rel="stylesheet" href="css/styles.css">
   </head>
-
-<ul>
+<menu>
   <li><a href="Journal.html">Weekly Journal</a></li>
   <li><a href="Projects.html">Class Projects</a></li>
   <li><a href="Bookmarks.html">Useful Bookmarks</a></li>
@@ -16,10 +15,9 @@
   <li><a href="Unit2.html">Unit 2 - Javascript : Tasks</a></li>
   <li><a href="Unit3.html">Unit 3 - Looping : Tasks</a></li>
   <li><a href="Unit7.html">Unit 7 - Front End Development : Tasks</a></li>
+  <li><a href="Summatives.html">Summatives/Quizzes/Practical,Tests</a></li>
   <li><a href="https://liamrodrigs.github.io/Liam-Rodrigs---7.3---Organization/">*Check out my tribute page for a famous youtuber, click here urgently, fast, quickly</a></li>
-</ul>
-</head>
-</body>
+</menu>
 
 <body><Body background="images/180254154-abstract-glowing-blue-coding-programming-background-with-blank-round-mock-up-frame-big-data-and-code.jpg"></body>
 
