--- a/Unit1.html
+++ b/Unit1.html
@@ -2,6 +2,10 @@
 
 <h1>Unit 1 - Intro to Javascript : Tasks</h1>
 <hr>
+<div id="topLeftSection">
+    <a href="index.html"><button>Return Home</button></a>
+</div>
+<br>
 "<a href="https://github.com/LiamRodrigs/ICS3U/blob/main/Unit01/1.1-Output.js">1.1 - Output and Console
 </a>"
 
