--- a/Unit2.html
+++ b/Unit2.html
@@ -1,7 +1,10 @@
 <html>
 <h1>Unit 2 - Javascript : Tasks</h1>
 <hr>
-
+<div id="topLeftSection">
+    <a href="index.html"><button>Return Home</button></a>
+</div>
+<br>
 "<a href="https://github.com/LiamRodrigs/ICS3U/blob/main/Unit01/Unit02/2.1%20-%20Functions.js">2.1 - Functions</a>"
 
 <p>This is a task where I went to use var instead of let because of flexibility purposes, prompting the user
