--- a/Unit3.html
+++ b/Unit3.html
@@ -1,7 +1,10 @@
 <html>
 <h1>Unit 3 - Looping : Tasks</h1>
 <hr>
-
+<div id="topLeftSection">
+    <a href="index.html"><button>Return Home</button></a>
+</div>
+<br>
 "<a href="https://github.com/ics-ASH/3-1-while-loops-LiamRodrigs/blob/main/3.1-While.js">3.1 - While Loops</a>"
 
 <p>This is a task where a "While" Loop is used to repeat a specific block of code an unknown number of times, until a condition is met. For example, if we want to ask a user for a number between 1 and 10, we don't know how many times the user may enter a larger number, so we keep asking "while the number is not between 1 and 10".
