journal update and final commit entirely

--- a/Journal.html
+++ b/Journal.html
@@ -6,6 +6,8 @@
 </div>
 <br>
 <head>
+<body><Body background="images/41Xnp+SUOHL._AC_.jpg">
+</body>
 <body>
 <script>window.addEventListener("scroll", function() {
     let scrollPosition = window.scrollY;
